tests/e2e/unary_complex_3b.error
Error: syntax error in story at line 3, column 6

<<<<<<< HEAD
3|    a = [not b, not 2] <= not t + t
          ^^^^^^^^^^^^^^^^^^^^^
=======
3|    a = [! b, !2] <= ! t + t
           ^^^
>>>>>>> 9dd515a899a05012800e23470b9ecf3577fe4090

E0122: `int` can't be converted to `boolean`
